--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
-    "mongodb": "^3.0.6"
+    "mongodb": "^3.0.6",
+    "mongoose": "^5.0.14"
   },
   "devDependencies": {},
   "scripts": {
