--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^2.5.8",
     "express": "^4.16.3",
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14"
