--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "geojson": "^0.5.0",
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14"
   },
